# twilight

./: .clang-format  .clangd  CMakeLists.txt  LICENSE
include/twilight/: discord.h  uri.h
include/twilight/http/: client.h  headers.h  response.h
include/twilight/utils/: base64.h  bitwise.h  random.h  sha1.h  types.h
include/twilight/ws/: client.h  frame.h
src/: discord.cc  uri.cc
src/http/: client.cc  headers.cc  response.cc
src/ws/: client.cc  frame.cc
